; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_entry_list_next.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_entry_list_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_file_entry = type { %struct.config_entry_list*, i32, i32 }
%struct.config_entry_list = type { %struct.config_entry_list*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_get_entry_list_next(%struct.config_file_entry* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.config_file_entry*, align 8
  %4 = alloca %struct.config_entry_list*, align 8
  store %struct.config_file_entry* %0, %struct.config_file_entry** %3, align 8
  %5 = load %struct.config_file_entry*, %struct.config_file_entry** %3, align 8
  %6 = getelementptr inbounds %struct.config_file_entry, %struct.config_file_entry* %5, i32 0, i32 0
  %7 = load %struct.config_entry_list*, %struct.config_entry_list** %6, align 8
  store %struct.config_entry_list* %7, %struct.config_entry_list** %4, align 8
  %8 = load %struct.config_entry_list*, %struct.config_entry_list** %4, align 8
  %9 = icmp ne %struct.config_entry_list* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %27

11:                                               ; preds = %1
  %12 = load %struct.config_entry_list*, %struct.config_entry_list** %4, align 8
  %13 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.config_file_entry*, %struct.config_file_entry** %3, align 8
  %16 = getelementptr inbounds %struct.config_file_entry, %struct.config_file_entry* %15, i32 0, i32 2
  store i32 %14, i32* %16, align 4
  %17 = load %struct.config_entry_list*, %struct.config_entry_list** %4, align 8
  %18 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.config_file_entry*, %struct.config_file_entry** %3, align 8
  %21 = getelementptr inbounds %struct.config_file_entry, %struct.config_file_entry* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 8
  %22 = load %struct.config_entry_list*, %struct.config_entry_list** %4, align 8
  %23 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %22, i32 0, i32 0
  %24 = load %struct.config_entry_list*, %struct.config_entry_list** %23, align 8
  %25 = load %struct.config_file_entry*, %struct.config_file_entry** %3, align 8
  %26 = getelementptr inbounds %struct.config_file_entry, %struct.config_file_entry* %25, i32 0, i32 0
  store %struct.config_entry_list* %24, %struct.config_entry_list** %26, align 8
  store i32 1, i32* %2, align 4
  br label %27

27:                                               ; preds = %11, %10
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
